--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "supabase:pull": "npx supabase pull"
   },
   "dependencies": {
+    "@fal-ai/serverless-client": "^0.9.3",
+    "@fal-ai/serverless-proxy": "^0.7.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@stripe/stripe-js": "2.4.0",
     "@supabase/ssr": "^0.1.0",
