--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-merge-refs": "^2.1.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "stripe": "^14.16.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
@@ -47,6 +49,7 @@
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
