--- a/package.json
+++ b/package.json
@@ -24,21 +24,29 @@
     "supabase:pull": "npx supabase pull"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@fal-ai/serverless-client": "^0.9.3",
     "@fal-ai/serverless-proxy": "^0.7.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-three/drei": "^9.105.6",
+    "@react-three/fiber": "^8.16.6",
     "@stripe/stripe-js": "2.4.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.2.6",
     "lucide-react": "0.330.0",
+    "maath": "^0.10.7",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-merge-refs": "^2.1.1",
+    "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
+    "react-tilt": "^1.0.2",
+    "react-vertical-timeline-component": "^3.6.0",
     "slick-carousel": "^1.8.1",
     "stripe": "^14.16.0",
     "tailwind-merge": "^2.2.1",
